bynkc/tests/fixtures/positive/204_workers_list_boundary/src/catalog.bynk
context catalog

type Order = {
  id: String,
  total: Int,
  tags: Map[String, Int],
}

service orders {
  on call(ids: List[String]) -> Effect[Result[List[Order], ()]] {
    let none: Map[String, Int] = Map.empty()
    Ok([Order { id: "a", total: 1, tags: none }, Order { id: "b", total: 2, tags: none }])
  }
}
