bynkc/tests/fixtures/negative/281_transition_duplicate_name/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String
  store count: Cell[Int] = 0

  transition t: new.count >= old.count
  transition t: old.count >= new.count

  on call bump() -> Effect[()] {
    count := count + 1
    Effect.pure(())
  }
}